--- a/front end/detail.html
+++ b/front end/detail.html
@@ -150,18 +150,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<form id="ratingForm" >
 								<fieldset>
 									<span class="star-cb-group" id="rating">
-										<input type="radio" id="rating-5" name="rating1" value="5" />
+										<input type="radio" id="rating-5" class="rating" name="rating1" value="5" />
 										<label for="rating-5">5</label>
-										<input type="radio" id="rating-4" name="rating1" value="4" />
+										<input type="radio" id="rating-4" class="rating" name="rating1" value="4" />
 										<label for="rating-4">4</label>
-										<input type="radio" id="rating-3" name="rating1" value="3" checked="checked" />
+										<input type="radio" id="rating-3" class="rating" name="rating1" value="3" />
 										<label for="rating-3">3</label>
-										<input type="radio" id="rating-2" name="rating1" value="2" />
+										<input type="radio" id="rating-2" class="rating" name="rating1" value="2" />
 										<label for="rating-2">2</label>
-										<input type="radio" id="rating-1" name="rating1" value="1" />
+										<input type="radio" id="rating-1" class="rating" name="rating1" value="1" />
 										<label for="rating-1">1</label>
-										<input type="radio" id="rating-0" name="rating1" value="0" class="star-cb-clear" />
-										<label for="rating-0">0</label>
 									</span>
 								</fieldset>
 							</form>
@@ -185,7 +183,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<textarea id="content" type="text" onfocus="this.value = '';"
 							onblur="if (this.value == '') {this.value = 'Type Your Comment here...';}"
 							required="">Type Your Comment here...</textarea>
-						<input type="submit" value="Add Comment" id="sendComment">
+						<input type="button" value="Add Comment" id="sendComment">
 					</form>
 				</div>
 			</div>
