--- a/front end/index.html
+++ b/front end/index.html
@@ -9,6 +9,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <head>
 <title>Travel Services a Travel Agency Category Flat Bootstarp Resposive Website Template</title>
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="css/all.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300,700,100,400' rel='stylesheet' type='text/css'>
@@ -136,8 +137,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</button>				
 				</div>			
 			</div>
-			
-
 		</div>
 
 	</div>
